Revert "UCSFD8-359 fixed wrapping of flex rows in mobile"
This reverts commit 788a5d7b26ead0da8b6a9765e79c1147c56f91c4.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -3177,13 +3177,7 @@ body.loading .quicklinks {
   font-weight: 500;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-flow: row wrap;
-      flex-flow: row wrap; }
+  display: flex; }
   .article-header__byline .news-card__primary-area,
   .article-header__byline .article-header__primary-area,
   .news-card__byline .news-card__primary-area,
@@ -5700,18 +5694,15 @@ figure.align-center {
     margin-bottom: 0 !important; }
 
 .media-coverage__list-byline {
-  margin: 0;
-  font-size: 14px;
-  font-family: "HelveticaNeueLTW04-55Roman", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-flow: row wrap;
-      flex-flow: row wrap; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+  font-size: 14px;
+  font-family: "HelveticaNeueLTW04-55Roman", "HelveticaNeue", "Helvetica", "Arial", sans-serif; }
 
 .field-featured-media-article .news-card__date,
 .media-coverage__list-date,
