--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -447,8 +447,6 @@
   font-family: $font-helvetica-neue-roman;
   font-weight: 500;
   display: flex;
-  flex-direction: row;
-  flex-flow: row wrap;
 
   .news-card__primary-area,
   .article-header__primary-area {
