--- a/docroot/themes/custom/ucsf/scss/node/_node-news-center.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-news-center.scss
@@ -310,12 +310,11 @@
 }
 
 .media-coverage__list-byline {
+  display: flex;
+  align-items: center;
   margin: 0;
   font-size: $font-size-xsm;
   font-family: $font-helvetica-neue-roman;
-  display: flex;
-  flex-direction: row;
-  flex-flow: row wrap;
 }
 
 .field-featured-media-article .news-card__date,
